# plight

./: .gitignore  Cargo.toml  README.md  flake.nix  plight.service
arduino/: arduino.ino  sketch.yaml
src/: config.rs  core.rs  errors.rs  lib.rs  main.rs  modes.rs  strip.rs  utils.rs
src/core/: arduino_strip.rs  led_color.rs  led_sequence.rs  strip.rs
src/modes/: audio.rs  behaviors.rs  cava_wall_dcol.rs  color.rs  music.rs  screen.rs  sources.rs  wallpaper.rs
src/modes/behaviors/: audio.rs  solid.rs
src/modes/sources/: color.rs  screen.rs  wallpaper.rs
src/utils/: audio.rs  color_math.rs  converters.rs  image_processing.rs  math.rs  parse_modes.rs  time.rs
