[package]
name = "plight"
version = "0.3.0"
edition = "2021"
description = "A configurable program for organizing dynamic backlighting."
readme = "README.md"
repository = "https://github.com/pguin-sudo/plight"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.100"
colog = "1.4.0"
confique = { version = "0.2.6", features = ["toml"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
image = "0.25.2"
lazy_static = "1.5.0"
log = "0.4.28"
ndarray = "0.16.1"
pipewire = "0.8.0"
rand = "0.8.5"
serde = "1.0.210"
serde_derive = "1.0.210"
serialport = "4.5.1"
thiserror = "2.0.17"
tokio = { version = "1.40.0", features = ["full"] }
xcap = "0.0.14"
